# canopy-code

./: .gitignore  README.md  action.yml  canopy.yml  canopy.yml.example  pyproject.toml
.github/workflows/: canopy-example.yml  ci.yml
canopy/: cli.py  config.py  exceptions.py  models.py
canopy/layout/: orbital.py
canopy/render/: __init__.py  html.py  svg.py  theme.py
docs/: canopy.html
tests/: conftest.py  test_cli.py  test_config.py  test_models.py
tests/test_render/: conftest.py  test_html.py  test_svg.py
